# napari-ai-lab

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
notebooks/: test_appose.ipynb  test_cellpose_training.ipynb  test_monai_unet_prediction.ipynb  test_monai_unet_training.ipynb  test_stardist_prediction.ipynb  test_stardist_prediction_slicewise.ipynb  test_stardist_training.ipynb
pixi/microsam_cellposesam_czi/: pixi.toml
pixi/stardist/: pixi.toml  startup.py
pixi/stardist8/: pixi.toml
scripts/: check_scale.py  downsample_czi_xy.py
src/: interactive_launch.py  interactive_launch_linux.py  launch_nd_ai_lab.py  launch_nd_easy_augment.py  launch_nd_easy_label.py  launch_nd_easy_segment.py  launch_nd_sequence_viewer.py
src/napari_ai_lab/: __init__.py  base_nd_app.py  base_nd_easy_widget.py  napari.yaml  nd_easy_label.py  nd_easy_segment.py  nd_easy_segmentation.py  nd_sequence_viewer.py  nd_stacked_sequence_viewer.py  utility.py
src/napari_ai_lab/Augmenters/: __init__.py  albumentations_augmenter.py  augmenter_base.py  simple_augmenter.py
src/napari_ai_lab/InteractiveSegmenters/: InteractiveSegmenterBase.py  Otsu2D.py  Otsu3D.py  SAM3D.py  Square2D.py  __init__.py
src/napari_ai_lab/Segmenters/: SegmenterBase.py  __init__.py  execute_appose.py
src/napari_ai_lab/_tests/: test_widget.py  test_writer.py
src/napari_ai_lab/apps/: __init__.py  base_nd_app.py  edit_masks.py  interactive_local_learning.py  interactive_local_machine_learning.py  nd_ai_lab.py  nd_ai_lab_plugin.py  nd_easy_augment.py  nd_easy_label.py  nd_easy_segment.py  project_open_setup.py  register_all.py  remote_env_dialog.py
src/napari_ai_lab/artifact_io/: __init__.py  base_artifact_io.py  numpy_artifact_io.py  stacked_sequence_artifact_io.py  tiff_artifact_io.py  tiff_slice_io.py  zarr_artifact_io.py
src/napari_ai_lab/datasets/: __init__.py  pytorch_semantic_3d_dataset.py  pytorch_semantic_dataset.py
src/napari_ai_lab/interactive_tests/: Interactive_Augmentation.py  Interactive_Cellpose.py  Interactive_Microsam.py  Interactive_Otsu.py  Interactive_Stardist.py  Interactive_Threshold.py  Interactive_test_appose.py  Interactive_test_slicing.py  README.md  __init__.py
src/napari_ai_lab/io/: __init__.py  numpy_io.py  tiff_io.py
src/napari_ai_lab/mixins/: TrainingBase.py  __init__.py
src/napari_ai_lab/models/: __init__.py  image_data_model.py  local_image_data_model.py
src/napari_ai_lab/utilities/: __init__.py  dl_util.py  image_util.py  io_util.py  progress_logger.py  qt_progress_logger.py  resize_util.py  slice_processor.py  sphere_mask_fit.py  training_thread.py
src/napari_ai_lab/widgets/: __init__.py  augmentation_widget.py  nd_operation_widget.py  parameter_form_widget.py  parameter_slider.py  segmenter_widget.py  train_dialog.py
src/napari_ai_lab/writers/: __init__.py  base_io.py  base_writer.py  numpy_writer.py  stacked_sequence_io.py  stacked_sequence_writer.py  tiff_writer.py
tests/: README.md  test_augmenters.py  test_axes_collapse.py  test_bioio_czi.py  test_cellcast_segmenter.py  test_czi.py  test_monai_unet.py  test_nd_easy_segment.py  test_ndev_czi.py  test_ndev_tif.py  test_progress_logger.py  test_segment.py  test_slicing.py  test_stardist_axis_map.py  test_stardist_axis_update.py  test_stardist_model_validation.py  test_temp.py  test_tif.py  test_tiff_slice_io.py  test_training.py  test_training_base.py  test_zarr_io.py
(+23 files in other folders)
